5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1593_1801.log
== TEST (2019-03-28 11:32:01) 
-- CODE:
obj= input("dd:")
rep= input("jj:")
total: obj*rep
print(total)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total: obj*rep
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:32:11) 
-- CODE:
obj= input("dd:")
rep= input("jj:")
total= obj*rep
print(total)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total= obj*rep
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:34:07) 
-- CODE:
obj= input("dd:")
rep= int(input("jj:"))
print("abra"+obj+" ")* rep	
-- EXECUTION TIME:
0.158629
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1801/main.py", line 3, in <module>
    print("abra"+obj+" ")* rep	
TypeError: unsupported operand type(s) for *: 'NoneType' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:34:25) 
-- CODE:
obj= input("dd:")
rep= int(input("jj:"))
print(("abra"+obj+" ")* rep)	
-- EXECUTION TIME:
0.157634
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivro abralivro abralivro abralivro abralivro abralivro abralivro abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarro abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:34:28) 
-- CODE:
obj= input("dd:")
rep= int(input("jj:"))
print(("abra"+obj+" ")* rep)	
-- EXECUTION TIME:
0.225048
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivro abralivro abralivro abralivro abralivro abralivro abralivro abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarro abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:34:53) 
-- CODE:
obj= input("dd:")
rep= int(input("jj:"))
print(("abra"+ obj +" ")* rep)	
-- OUTPUT:
abralivro abralivro abralivro abralivro abralivro abralivro abralivro abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:35:06) 
-- CODE:
obj= input("dd:")
rep= int(input("jj:"))
print(("abra" + obj +" ")* rep)	
-- OUTPUT:
abralivro abralivro abralivro abralivro abralivro abralivro abralivro abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:35:19) 
-- CODE:
obj= input("dd:")
rep= int(input("jj:"))
print(("abra" + obj +" ")* rep)	
-- EXECUTION TIME:
0.183905
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivro abralivro abralivro abralivro abralivro abralivro abralivro abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarro abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:35:21) 
-- CODE:
obj= input("dd:")
rep= int(input("jj:"))
print(("abra" + obj +" ")* rep)	
-- OUTPUT:
abralivro abralivro abralivro abralivro abralivro abralivro abralivro abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:35:39) 
-- CODE:
obj= input("dd:")
rep= int(input("jj:"))
print(("abra" + obj + " ")* rep)	
-- OUTPUT:
abralivro abralivro abralivro abralivro abralivro abralivro abralivro abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 22:37:31) 
-- CODE:
obj= input("dd:")
rep= int(input("jj"))
print(("Abra" + obj + " ")* x2)	
-- EXECUTION TIME:
0.307903
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1801/main.py", line 3, in <module>
    print(("Abra" + obj + " ")* x2)	
NameError: name 'x2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 22:37:43) 
-- CODE:
obj= input("dd:")
rep= int(input("jj"))
print(("Abra" + obj + " ")* rep)	
-- EXECUTION TIME:
0.216754
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarro Abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 22:38:20) 
-- CODE:
obj= input("dd:")
rep= int(input("jj"))
print(("Abra" + obj + " ")* rep)	
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 22:40:07) 
-- CODE:
x1= input("nome")
x2= int(input(" nrf "))
print(("Abra " + x1 + " ") * x2)
-- EXECUTION TIME:
0.128238
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
